# zkhack-mini-2022

./: .gitmodules
zkhack-can-you-turn-up-the-heat/: Cargo.toml
zkhack-can-you-turn-up-the-heat-winterfell/prover/src/: lib.rs
zkhack-can-you-turn-up-the-heat-winterfell/prover/src/composer/: composer.rs
zkhack-can-you-turn-up-the-heat/src/: main.rs
zkhack-there-is-something-in-the-AIR/src/: lib.rs  prover.rs
